<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:defaultValue="@string/pref_bgr_color_default"
        android:entries="@array/pref_bgr_color_list_titles"
        android:entryValues="@array/pref_bgr_color_list_values"
        android:key="@string/pref_bgr_color_key"
        android:title="@string/pref_title_default_background_color" />

    <ListPreference
        android:defaultValue="modifiedDate"
        android:entries="@array/pref_sort_order_list_titles"
        android:entryValues="@array/pref_sort_order_list_values"
        android:key="@string/pref_sort_order_key"
        android:title="@string/pref_title_default_sort_order" />

</PreferenceScreen>
